; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/matlab/extr_icctrans.c_ApplyTransforms.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/matlab/extr_icctrans.c_ApplyTransforms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hColorTransform = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @ApplyTransforms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ApplyTransforms(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca double*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call double* @mxGetPr(i32* %8)
  store double* %9, double** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call double* @mxGetPr(i32* %10)
  store double* %11, double** %6, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @GetNumberOfPixels(i32* %12)
  store i64 %13, i64* %7, align 8
  %14 = load i32, i32* @hColorTransform, align 4
  %15 = load double*, double** %5, align 8
  %16 = load double*, double** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @cmsDoTransform(i32 %14, double* %15, double* %16, i64 %17)
  ret void
}

declare dso_local double* @mxGetPr(i32*) #1

declare dso_local i64 @GetNumberOfPixels(i32*) #1

declare dso_local i32 @cmsDoTransform(i32, double*, double*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
